--- a/apibase/package.json
+++ b/apibase/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.30.0",
     "nodemon": "2.0.20"
   },
   "dependencies": {
+    "cors": "2.8.5",
     "express": "^4.18.2"
   }
 }
