--- a/apibase/package.json
+++ b/apibase/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "test": "jest --verbose"
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --silent",
+    "test:watch": "npm run test  -- --watch",
+    "test:provincias": "cross-env NODE_ENV=test jest --verbose --silent tests/provincias.test.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.30.0",
     "jest": "^29.3.1",
-    "nodemon": "2.0.20"
+    "nodemon": "2.0.20",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "cors": "2.8.5",
@@ -21,7 +25,7 @@
     "express": "^4.18.2",
     "mongoose": "^6.8.1"
   },
-  "jest":{
+  "jest": {
     "testEnvironment": "node"
   }
 }
